tests/negative/test_if_cond_unty_not_bool.orb
fnc main() {
    if (0) {}
}